--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SJ Darts – Coming Soon</title>
+  <title>SJ Darts</title>
   <style>
     body {
       font-family: 'Tahoma', Tahoma;
@@ -45,13 +45,14 @@
       display: inline-block;
     }
   </style>
-</head>
 
 
 <body>
   
   <img src="SJ Darts flyer.png" alt="SJ Darts Coaching Flyer" style="width:600px;height:750px;" />
-  <div class="coming-soon"> Full Website Coming Soon – 2025</div>
+  <div class="coming-soon"> href="mailto:contact@sjdarts.com?subject=Website Enquiry">Send email</div>
+  <div class="coming-soon"> Full Website Coming Soon</div>
   <img src="SJD White.jpg" alt="SJ Darts Logo" class="logo" style="width:100px;height:100px;" />
 </body>
 </html>
+
