--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
   </style>
 
-
+</head>
 <body>
   
   <img src="SJ Darts flyer.png" alt="SJ Darts Coaching Flyer" style="width:600px;height:750px;" />
@@ -55,5 +55,6 @@
   <img src="SJD White.jpg" alt="SJ Darts Logo" class="logo" style="width:100px;height:100px;" />
 </body>
 </html>
+
 
 
