--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       margin: 0;
       padding: 0 20px;
     }
+    @media screen and (max-width: 375px) {
+  body {
+    align-items: flex-start;
+  }
     h1 {
       font-size: 3rem;
       margin-bottom: 0.5rem;
@@ -56,6 +60,7 @@
   <img src="SJD White.jpg" alt="SJ Darts Logo" class="logo" style="width:100px;height:100px;" />
 </body>
 </html>
+
 
 
 
