--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
   
 <body>
   <br><br>
-  <img src="SJ Darts flyer.png" alt="SJ Darts Coaching Flyer" class="center" style="width:500px;height:600px;" />
+  <img src="SJ Darts flyer.png" alt="SJ Darts Coaching Flyer" style="width:500px;height:600px;" />
   <div class="coming-soon"> <a href="mailto:contact@sjdarts.com?subject=Website Enquiry">Send email</a></div>
   <div class="coming-soon"> Full Website Coming Soon</div>
   <img src="SJD White.jpg" alt="SJ Darts Logo" class="logo" style="width:100px;height:100px;" />
 </body>
 </html>
+
 
 
 
