--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coming Soon</title>
+  <title>SJ Darts</title>
   <style>
     body {
       margin: 0;
@@ -68,3 +68,4 @@
   <img src="SJD White.jpg" alt="SJ Darts Logo" class="logo" style="width:100px;height:100px;" />
 </body>
 </html>
+
